<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailFragment"
            type="com.udacity.detail.DetailFragment" />
U
        <variable
            name="downloadDataModel"
            type="com.udacity.data.model.DownloadDataModel" />

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/detail_animation">

        <TextView
            android:id="@+id/download_name_title_textView"
            style="@style/DetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_margin_between_views"
            android:layout_marginTop="@dimen/dim_margin_between_views"
            android:text="@string/text_file_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/download_name_colon"
            style="@style/DetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_margin_between_views"
            android:text="@string/text_colon"
            app:layout_constraintBottom_toBottomOf="@+id/download_name_title_textView"
            app:layout_constraintStart_toEndOf="@+id/download_name_title_textView"
            app:layout_constraintTop_toTopOf="@+id/download_name_title_textView" />

        <TextView
            android:id="@+id/download_name_textView"
            android:layout_width="0dp"
            app:text="@{downloadDataModel.fileName}"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_margin_between_views"
            android:layout_marginTop="@dimen/dim_margin_left_right"
            android:layout_marginEnd="@dimen/dim_margin_between_views"
            android:textAlignment="viewStart"
            android:textColor="?colorPrimaryVariant"
            android:textSize="@dimen/dim_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/download_name_colon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="description\ndescription\ndescription" />

        <TextView
            android:id="@+id/download_status_title_textView"
            style="@style/DetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_margin_left_right"
            android:text="@string/text_status"
            app:layout_constraintStart_toStartOf="@+id/download_name_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/download_name_textView" />

        <TextView
            android:id="@+id/download_status_colon"
            style="@style/DetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_colon"
            app:layout_constraintBottom_toBottomOf="@+id/download_status_title_textView"
            app:layout_constraintStart_toStartOf="@+id/download_name_colon"
            app:layout_constraintTop_toTopOf="@+id/download_status_title_textView" />

        <TextView
            android:id="@+id/download_status_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:text="@{downloadDataModel.fileStatus}"
            android:textAlignment="viewStart"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/dim_title_text_size"
            app:layout_constraintEnd_toEndOf="@+id/download_name_textView"
            app:layout_constraintStart_toStartOf="@+id/download_name_textView"
            app:layout_constraintTop_toTopOf="@+id/download_status_colon"
            tools:text="@string/app_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/dim_button_size"
            android:layout_marginBottom="@dimen/dim_margin_left_right"
            android:backgroundTint="@color/colorAccent"
            android:onClick="@{() -> detailFragment.onConfirmButtonClick()}"
            android:stateListAnimator="@null"
            android:text="@string/text_confirm"
            android:layout_marginEnd="@dimen/dim_margin_between_views"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/download_name_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/download_status_textView"
            app:layout_constraintVertical_bias="0.76" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>
