<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.udacity.main.viewModel.MainViewModel" />

    </data>

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".main.view.MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dim_margin_left_right">

            <FrameLayout
                android:id="@+id/header_frameLayout"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:background="?colorPrimaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:contentDescription="@string/text_description_application_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_download" />

            </FrameLayout>

            <RadioGroup
                android:id="@+id/options_radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_margin_left_right"
                android:paddingStart="@dimen/dim_margin_between_views"
                android:paddingEnd="@dimen/dim_margin_between_views"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_frameLayout">

                <RadioButton
                    android:id="@+id/glide_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(compoundButton,isChecked) -> mainViewModel.onGlideCheckedChanged(compoundButton,isChecked)}"
                    android:text="@string/text_glide_description"
                    style="@style/RadioButtonStyle"
                    tools:checked="true" />

                <RadioButton
                    android:id="@+id/udacity_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_margin_between_views"
                    android:onCheckedChanged="@{(compoundButton,isChecked) -> mainViewModel.onUdacityCheckedChanged(compoundButton,isChecked)}"
                    android:text="@string/text_udacity_option"
                    style="@style/RadioButtonStyle" />

                <RadioButton
                    android:id="@+id/retrofit_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_margin_between_views"
                    android:onCheckedChanged="@{(compoundButton,isChecked) -> mainViewModel.onRetrofitCheckedChanged(compoundButton,isChecked)}"
                    android:text="@string/text_retrofit_option"
                    style="@style/RadioButtonStyle" />

            </RadioGroup>

            <com.udacity.util.LoadingButton
                android:id="@+id/custom_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/dim_button_size"
                android:layout_marginStart="@dimen/dim_margin_between_views"
                android:layout_marginTop="@dimen/dim_margin_left_right"
                android:layout_marginEnd="@dimen/dim_margin_between_views"
                android:onClick="@{() -> mainViewModel.downloadClick()}"
                app:buttonIdleColor="@color/colorPrimary"
                app:buttonLoadingColor="?colorPrimaryVariant"
                app:circleLoadingColor="@color/colorAccent"
                app:textSize="@dimen/dim_button_text_size"
                app:cornerSize="@dimen/dim_margin_between_views"
                app:textStyling="bold"
                app:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_radioGroup"
                app:layout_constraintVertical_bias="0.498" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
